--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "dependencies": {
     "history": "^3.0.0",
     "react": "^15.2.0",
+    "react-dom": "^15.2.1",
     "react-router": "^2.5.2",
     "webpack": "^1.13.1"
   },
