--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^3.2.1",
     "history": "^3.0.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.1",
     "react-router": "^2.5.2",
+    "reactfire": "^1.0.0",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
